refactor: Change from 'List.of(...)' to 'Arrays.asList(...)' to ensure compatibility with Java 8